# stackstead

./: .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  early-adopter.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  agent-contract.md  agent-integration.md  agent-setup-v1.md  agent-setup.md  compose.md  config.md  database.md  early-adopters.md  install.md  integrations.md  lifecycle.md  quickstart.md  reliability.md  rust-architecture.md  upgrade-0.1.4.md  why-stackstead.md
docs/releases/: v0.1.4.md
examples/basic-compose/: README.md  docker-compose.yml  stackstead.yaml
examples/three-agent-demo/: .gitignore  README.md  demo.sh  docker-compose.yml  stackstead.yaml
examples/yarn-classic/: README.md  docker-compose.yml  index.js  package.json  stackstead.yaml
integrations/generic/: README.md  create-stackstead-owned.sh
integrations/hooks/: adopt-current.sh  run-current.sh  (+2 more)
scripts/: check-policy.sh  checkpoint-review.sh  ci.sh  docker-integration.sh  test-delivery.sh  test-install.sh  test-policy.sh  test-release-install.sh
src/: agent.rs  cli.rs  command.rs  compose.rs  config.rs  context.rs  database.rs  discovery.rs  doctor.rs  envfile.rs  error.rs  events.rs  git.rs  health.rs  lease.rs  lifecycle.rs  lock.rs  main.rs  manifest.rs  open.rs  output.rs  paths.rs  ports.rs  repair.rs  repository_policy.rs  slug.rs  state.rs  supervisor.rs  template.rs  test_support.rs
tests/: cli_acceptance.rs
(+15 files in other folders)
