[package]
name = "stackstead"
version = "0.1.3"
edition = "2024"
rust-version = "1.91.1"
description = "Isolated real application runtimes for parallel coding agents"
license = "MIT"
readme = "README.md"
publish = false
autolib = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
getrandom = "0.4"
libc = "0.2"
opener = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shell-words = "1"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", default-features = false, features = ["tls"] }

[dev-dependencies]
assert_cmd = "2"

[profile.release]
strip = true
lto = "thin"
